# SNet

./: CMakeLists.txt
SNetLib/: CMakeLists.txt
SNetLib/Include/: SBase.h  SNet.h  globals.h
SNetLib/Include/network/: INet.h  NetCommon.h  TcpClient.h  TcpServer.h  UdpClient.h  UdpServer.h
SNetLib/Source/: CMakeLists.txt
SNetLib/Source/network/: INet.cpp  TCPClient.cpp  TcpServer.cpp  UdpClient.cpp  UdpServer.cpp
SNetTest/: CMakeLists.txt  main.cpp  main.h
